Cleaned footer (each logical group has its own file now) + Added new logic for fetching data from code

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,240 +69,17 @@
 <script type="text/javascript" src="../assets/js/src/git-file-manager.js"></script>
 <script type="text/javascript" src="../assets/js/src/index.js"></script>
 <script type="text/javascript" src="../assets/js/src/custom-form-validation.js"></script>
-<script type="text/javascript" src="../assets/js/src/utils.js"></script>
+<script type="text/javascript" src="../assets/js/src/validation.js"></script>
+<script type="text/javascript" src="../assets/js/src/tags.js"></script>
+<script type="text/javascript" src="../assets/js/src/programmingLanguages.js"></script>
+{% if page.ref == "codeForm" %}
+  <script type="text/javascript" src="../assets/js/src/codeForm.js"></script>
+{% endif %}
 {% if page.ref == "standardsForm" %}
   <script type="text/javascript" src="../assets/js/src/standardsForm.js"></script>
 {% endif %}
 <script>
-
   const REPO_NAME = "{{ site.github_repository }}";
   const USERNAME = "{{ site.github_username }}";
   const PRBOT_URL = "{{ site.prbot_url }}";
-
-  var selectedAdminCode = "";
-  var pathNameUrl = window.location.pathname;
-  var enPathName = "/ore-ero/en/open-source-code-form.html";
-  var pName = "";
-
-  function addMoreLanguages(){
-    $(`<div class="control-group input-group col-xs-2" style="margin-top:10px" >
-          <input type="text" id="${'_' + Math.random().toString(36).substr(2, 9)}" name="language" data-for="languages" class="form-control" required="required">
-          <div class="input-group-btn">
-            <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-          </div>
-        </div>`).appendTo("#codeLanguages");
-
-    $(document).ready(function() {
-      $(this).parents(".control-group").remove();
-    });
-  }
-
-  function addMoreTags(){
-    $(`<div class="copy hide">
-    <div class="control-group input-group col-xs-2" style="margin-top:10px" >
-      <input type="text" id="tag" name="tag" class="form-control">
-      <div class="input-group-btn">
-        <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-      </div>
-    </div>
-    </div>`).appendTo("#tags");
-
-    $(document).ready(function() {
-      $(".add-more").click(function(){
-          var html = $(".copy").html();
-          $(html).appendTo("#tagsEN");
-          $(html).appendTo("#tagsFR");
-      });
-
-      $("body").on("click",".remove",function(){
-          $(this).parents(".control-group").remove();
-      });
-    });
-  }
-
-  function buildProjectField(project){
-    (pathNameUrl == enPathName) ?
-    $('<option label="' + project.name[ "en"] + '" value="' + project.name["en"] + '"></option>').appendTo("#listProjects"):
-    $('<option label="' + project.name[ "fr"] + '" value="' + project.name["fr"] + '"></option>').appendTo("#listProjects");
-  }
-
-  function checkExistingData(project){
-    if(project.contact.URL === undefined)project.contact.URL = "";
-
-    if(project.downloadURL === undefined) project.downloadURL = "";
-
-    if(project.homepageURL === undefined) project.homepageURL = "";
-
-    if(project.organization === undefined) project.organization = "";
-
-    if(project.partners === undefined) project.partners = [];
-    if(project.partners.URL === undefined) project.partners.URL = "";
-    if(project.partners.name === undefined) project.partners.name = "";
-
-    if(project.relatedCode === undefined) {
-      project.relatedCode = [];
-      project.relatedCode[0] = [];
-      project.relatedCode[0].URL = "";
-      project.relatedCode[0].name = "";
-    }
-  }
-
-  function fillFields(project){
-
-    checkExistingData(project)
-    var datas_form = {
-      "schemaVersion" : "1.0",
-      "selectedPro" : pName,
-      "enUrlContact" : project.contact.URL["en"],
-      "frUrlContact" : project.contact.URL["fr"],
-      "emailContact" : project.contact.email,
-      "nameContact" : project.contact.name,
-      "phone" : project.contact.phone,
-      "dateCreated" : project.date.created,
-      "dateLastModified" : project.date.lastModified,
-      "dateLastUpdated" : getTodayDate(),
-
-      "enDescription" : project.description["en"],
-      "frDescription" : project.description["fr"],
-
-      "enDownloadUrl" : project.downloadURL["en"],
-      "frDownloadUrl" : project.downloadURL["fr"],
-
-      "enHomepageURL" : project.homepageURL["en"],
-      "frHomepageURL" : project.homepageURL["fr"],
-
-      "enProjectName" : project.name["en"],
-      "frProjectName" : project.name["fr"],
-
-      "enOrganization" : project.organization["en"],
-      "frOrganization" : project.organization["fr"],
-
-      "enUrlPartner" : project.partners.URL["en"],
-      "frUrlPartner" : project.partners.URL["fr"],
-      "emailPartner" : project.partners.email,
-      "enNamePartner" : project.partners.name["en"],
-      "frNamePartner" : project.partners.name["fr"],
-
-      "enLicenses" : project.licenses[0].URL["en"],
-      "frLicenses" : project.licenses[0].URL["fr"],
-      "spdxID" : project.licenses[0].spdxID,
-
-      "enRepositoryUrl" : project.repositoryURL["en"],
-      "frRepositoryUrl" : project.repositoryURL["fr"],
-
-      "enUrlRelatedCode" : project.relatedCode[0].URL["en"],
-      "frUrlRelatedCode" : project.relatedCode[0].URL["fr"],
-      "enNameRelatedCode" : project.relatedCode[0].name["en"],
-      "frNameRelatedCode" : project.relatedCode[0].name["fr"],
-
-      "vcs" : project.vcs,
-      "versionProject" : project.version
-    }
-
-    $("#validation").find('input').val(function(){
-      if (!datas_form[this.id] && this.type === 'checkbox') {
-        return this.value;
-      }
-      return datas_form[this.id];
-    });
-
-    $("#status").val(project.status);
-
-    if(project.languages !== undefined){
-      project.languages.forEach(function(language){
-        $('.' + language).attr('checked', true);
-      })
-    }
-
-    if(project.tags !== undefined){
-      project.tags["en"].forEach(function(tag){
-        $(`<div class="control-group input-group col-xs-2" style="margin-top:10px" >
-            <input type="text" id="tag" name="tag" value="${tag}" class="form-control" required="required">
-            <div class="input-group-btn">
-             <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-           </div>
-          </div>`).appendTo("#tagsEN");
-      })
-
-      project.tags["fr"].forEach(function(tag){
-        $(`<div class="control-group input-group col-xs-2" style="margin-top:10px" >
-            <input type="text" id="tag" name="tag" value="${tag}" class="form-control" required="required">
-            <div class="input-group-btn">
-             <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-            </div>
-           </div>`).appendTo("#tagsFR");
-      })
-    }
-  }
-
-  function getTodayDate(){
-    var date = new Date();
-    var day = date.getDate();
-    var month = date.getMonth() + 1;
-    var year = date.getFullYear();
-    if (month < 10) month = "0" + month;
-    if (day < 10) day = "0" + day;
-    var today = year + "-" + month + "-" + day;
-    return today;
-  }
-
-  function displayListOrgProject(organization){
-    (pathNameUrl == enPathName)?
-    $('<label for="selectedPro">Select a project </label> <input class="form-control" id="selectedPro" name="selectedPro" type="text" list="listProjects"/><datalist id = "listProjects"></datalist>').appendTo("#selectedProject"): 
-    $('<label for="selectedPro">Sélectionner un projet </label> <input class="form-control" id="selectedPro" name="selectedPro" type="text" list="listProjects"/><datalist id = "listProjects"></datalist>').appendTo("#selectedProject");
-
-    organization.releases.forEach(function(project){
-      buildProjectField(project);
-    });
-  }
-
-  function getProjectFields(organization){
-    pName = $("#selectedPro").val();
-    organization.releases.forEach(function(project){
-      if(project.name["en"] == pName || project.name["fr"] == pName) fillFields(project);
-    });
-  }
-
-  $(document).ready(function() {
-    addMoreTags();
-  });
-
-  $(document).ready(function(){
-    $("#adminCode").change(function(){
-      $.getJSON("https://canada-ca.github.io/ore-ero/code.json", function(result){
-
-        $('#selectedProject').empty();
-        selectedAdminCode = $("#adminCode").val();
-
-        var federal = result.federal[selectedAdminCode];
-        var provincial = result.provincial[selectedAdminCode];
-        var municipal = result.municipal[selectedAdminCode];
-
-        if( municipal !== undefined){
-            displayListOrgProject(municipal);
-        } else if( provincial !== undefined){
-            displayListOrgProject(provincial);
-        } else if( federal !== undefined){
-            displayListOrgProject(federal);
-        }
-
-        $('#selectedPro').focus();
-
-        $('#selectedPro').change(function(){
-
-          $("#tagsEN").find('.control-group').detach();
-          $("#tagsFR").find('.control-group').detach();
-
-          if( municipal !== undefined){
-              getProjectFields(municipal);
-          } else if( provincial !== undefined){
-              getProjectFields(provincial);
-          } else if( federal !== undefined){
-              getProjectFields(federal);
-          }
-
-        });
-      });
-    });
-  });
 </script>
