--- a/_includes/form/presets/languages.html
+++ b/_includes/form/presets/languages.html
@@ -14,13 +14,13 @@
     {% endfor %}
   {% endfor %}
 
-  {% assign languages_array = languages_array | uniq  %}
-  {% for language in languages_array %}
-    <div class="checkbox" >
-      <label><input class="{{ language }}" data-for="languages" type="checkbox" value="{{ language }}" name="{{ language }}"> {{ language  }} </label>
-    </div>
-  {% endfor %}
-
-  <div id="codeLanguages" class="form-group"></div>
+  <div id="codeLanguages" class="form-group">
+    {% assign languages_array = languages_array | uniq  %}
+    {% for language in languages_array %}
+      <div class="checkbox" >
+        <label><input class="{{ language }}" data-for="languages" type="checkbox" value="{{ language }}" name="{{ language }}"> {{ language  }} </label>
+      </div>
+    {% endfor %}
+  </div>
   <button type="button" class="btn btn-primary" onclick = "addMoreLanguages()">{{ site.data.i18n.form.presets.Languages.add[page.lang] }}</button>
 </div>
