--- a/_includes/form/presets/submitter.html
+++ b/_includes/form/presets/submitter.html
@@ -1,3 +1,5 @@
+{% include form/presets/components/hr.html %}
+
 <h2>{{ site.data.i18n.form.presets.Submitter.title[page.lang] }}</h2>
 
 {% capture label %}{{ site.data.i18n.form.name[page.lang] }}{% endcapture %}
