Build correcion | Adaptation from name[en/fr] to a simple name

--- a/_includes/codeRepoGroups.html
+++ b/_includes/codeRepoGroups.html
@@ -12,18 +12,18 @@
                     {% assign admin = admins[1] %}
                     {% for release in admin.releases %}
                         {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
-                        {% if aName[0].name[page.lang] != nil %}
+                        {% if aName[0].name != nil %}
                             {% if release.repositoryURL[page.lang] != nil %}
                                 {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
                                 {% assign repo_size =  repo_url | size %}
                                 {% if repo_size == 3  %}
 
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign org_url =  aName[0].name | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign repo_array = repo_array | push: org_url%}
                                     {% assign groups_array = groups_array | push: grp_url %}
                                     {% elsif repo_size == 4  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign org_url =  aName[0].name | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
 
                                     {% assign repo_array = repo_array | push: org_url %}
@@ -45,7 +45,7 @@
                 {% elsif grp_name.size == 3  %}
                     <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
 
-                {%endif%}   
+                {%endif%}
                 {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
                     {% if repo contains {{grp}} %}
@@ -72,18 +72,18 @@
                     {% assign admin = admins[1] %}
                     {% for release in admin.releases %}
                         {% assign aName = site.data.administrations.provincial | where: "code", admin.adminCode %}
-                        {% if aName[0].name[page.lang] != nil %}
+                        {% if aName[0].name != nil %}
                             {% if release.repositoryURL[page.lang] != nil %}
                                 {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
                                 {% assign repo_size =  repo_url | size %}
                                 {% if repo_size == 3  %}
 
-                                     {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                     {% assign org_url =  aName[0].name | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign repo_array = repo_array | push: org_url%}
                                     {% assign groups_array = groups_array | push: grp_url %}
                                     {% elsif repo_size == 4  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign org_url =  aName[0].name | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
 
                                     {% assign repo_array = repo_array | push: org_url %}
@@ -105,7 +105,7 @@
                 {% elsif grp_name.size == 3  %}
                     <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
 
-                {%endif%}   
+                {%endif%}
                 {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
                     {% if repo contains {{grp}} %}
@@ -132,18 +132,18 @@
                     {% assign admin = admins[1] %}
                     {% for release in admin.releases %}
                         {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
-                        {% if aName[0].name[page.lang] != nil %}
+                        {% if aName[0].name != nil %}
                             {% if release.repositoryURL[page.lang] != nil %}
                                 {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
                                 {% assign repo_size =  repo_url | size %}
                                 {% if repo_size == 3  %}
 
-                                     {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                     {% assign org_url =  aName[0].name | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign repo_array = repo_array | push: org_url%}
                                     {% assign groups_array = groups_array | push: grp_url %}
                                     {% elsif repo_size == 4  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign org_url =  aName[0].name | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
 
                                     {% assign repo_array = repo_array | push: org_url %}
@@ -165,7 +165,7 @@
                 {% elsif grp_name.size == 3  %}
                     <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
 
-                {%endif%}   
+                {%endif%}
                 {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
                     {% if repo contains {{grp}} %}
@@ -192,18 +192,18 @@
                     {% assign admin = admins[1] %}
                     {% for release in admin.releases %}
                         {% assign aName = site.data.administrations.aboriginal | where: "code", admin.adminCode %}
-                        {% if aName[0].name[page.lang] != nil %}
+                        {% if aName[0].name != nil %}
                             {% if release.repositoryURL[page.lang] != nil %}
                                 {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
                                 {% assign repo_size =  repo_url | size %}
                                 {% if repo_size == 3  %}
 
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign org_url =  aName[0].name | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign repo_array = repo_array | push: org_url%}
                                     {% assign groups_array = groups_array | push: grp_url %}
                                     {% elsif repo_size == 4  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign org_url =  aName[0].name | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
 
                                     {% assign repo_array = repo_array | push: org_url %}
@@ -225,7 +225,7 @@
                 {% elsif grp_name.size == 3  %}
                     <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
 
-                {%endif%}   
+                {%endif%}
                 {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
                     {% if repo contains {{grp}} %}
