Revert "Build correcion | Adaptation from name[en/fr] to a simple name"
This reverts commit 36b82e8599fd1354fde375dafdc0ff5f82442800.

--- a/_includes/codeLastUpdated.html
+++ b/_includes/codeLastUpdated.html
@@ -24,7 +24,7 @@
       {% for release in admin.releases %}
         {% assign d = release.date.metadataLastUpdated | date : '%s' %}
         {% if d == lastUpdated %}
-          {% assign projectName_array = projectName_array | push: release.name %}
+          {% assign projectName_array = projectName_array | push: release.name[page.lang] %}
           {% assign repoUrl_array = repoUrl_array | push: release.repositoryURL[page.lang] %}
         {% endif %}
       {% endfor %}
