--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -24,23 +24,23 @@
           {% for fptms in site.data.code %}
             {% assign fptm = fptms[1] %}
             {% for admins in fptm %}
-              {% assign admin = admins[1] %}
+              {% assign admin = admins[1] %}   
               {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
                 {% assign admin_array = admin_array | push: aName[0].name[page.lang] %}
               {% endif %}
             {% endfor %}
-
+            
             {% for admins in fptm %}
-              {% assign admin = admins[1] %}
+              {% assign admin = admins[1] %}   
               {% assign aName = site.data.administrations.provincial | where: "code", admin.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
                 {% assign admin_array = admin_array | push: aName[0].name[page.lang] %}
               {% endif %}
             {% endfor %}
-
+            
             {% for admins in fptm %}
-              {% assign admin = admins[1] %}
+              {% assign admin = admins[1] %}   
               {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
                 {% assign admin_array = admin_array | push: aName[0].name[page.lang] %}
@@ -48,14 +48,14 @@
             {% endfor %}
 
             {% for admins in fptm %}
-              {% assign admin = admins[1] %}
+              {% assign admin = admins[1] %}   
               {% assign aName = site.data.administrations.aboriginal | where: "code", admin.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
                 {% assign admin_array = admin_array | push: aName[0].name[page.lang] %}
               {% endif %}
             {% endfor %}
           {% endfor %}
-
+          
           {% assign admin_array = admin_array | sort %}
           {% for admin in admin_array %}
             <option value="{{ admin }}">{{ admin }}</option>
@@ -68,7 +68,7 @@
         <select class="form-control" id="dt_organization" name="dt_organization" data-column="5">
           <option value="">&nbsp;</option>
           {% assign org_array = "" | split: ',' %}
-
+          
           {% for fptms in site.data.code %}
             {% assign fptm = fptms[1] %}
             {% for admins in fptm %}
@@ -80,20 +80,20 @@
               {% endfor %}
             {% endfor %}
           {% endfor %}
-
+                    
           {% assign org_array = org_array | group_by: "" | sort: "name" %}
           {% for org in org_array %}
             <option value="{{ org.name }}">{{ org.name }}</option>
           {% endfor %}
         </select>
       </div>
-
+      
       <div class="form-group">
         <label for="dt_license">{{ site.License[page.lang] }}</label>
         <select class="form-control" id="dt_license" name="dt_license" data-column="3">
           <option value="">&nbsp;</option>
           {% assign license_array = "" | split: ',' %}
-
+          
           {% for fptms in site.data.code %}
             {% assign fptm = fptms[1] %}
             {% for admins in fptm %}
@@ -105,20 +105,20 @@
               {% endfor %}
             {% endfor %}
           {% endfor %}
-
+                    
           {% assign license_array = license_array | group_by: "" | sort: "name" %}
           {% for license in license_array %}
             <option value="{{ license.name }}">{{ license.name }}</option>
           {% endfor %}
         </select>
       </div>
-
+      
       <div class="form-group">
         <label for="dt_tag">{{ site.Tag[page.lang] }}</label>
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="4">
           <option value="">&nbsp;</option>
           {% assign tag_array = "" | split: ',' %}
-
+          
           {% for fptms in site.data.code %}
             {% assign fptm = fptms[1] %}
             {% for admins in fptm %}
@@ -130,14 +130,14 @@
               {% endfor %}
             {% endfor %}
           {% endfor %}
-
+          
           {% assign tag_array = tag_array | group_by: "" | sort: "name" %}
           {% for tag in tag_array %}
             <option value="{{ tag.name }}">{{ tag.name }}</option>
           {% endfor %}
         </select>
       </div>
-
+      
       <div class="row">
         <div class="col-xs-6">
           <button type="submit" class="btn btn-primary" aria-controls="dataset-filter">{{ site.Filter[page.lang] }}</button>
@@ -146,7 +146,7 @@
           <button type="reset" class="btn btn-default">{{ site.Clear[page.lang] }}</button>
         </div>
       </div>
-
+      
     </form>
   </details>
 </div>
@@ -168,13 +168,13 @@
         <th>{{ site.RelatedCode[page.lang] }}</th>
         <th>{{ site.Status[page.lang] }}</th>
         <th>Vcs</th>
-        <th>Version</th>
-        <th>{{ site.CodeCreated[page.lang] }}</th>
-        <th>{{ site.MetadataLastUpdatedCode[page.lang] }}</th>
+        <th>Version</th> 
+        <th>{{ site.CodeCreated[page.lang] }}</th> 
+        <th>{{ site.MetadataLastUpdatedCode[page.lang] }}</th> 
       </tr>
     </thead>
     <tbody>
-
+      
       {% for fptms in site.data.code %}
         {% assign fptm = fptms[1] %}
         {% for admins in fptm %}
@@ -185,23 +185,23 @@
             {% if aName[0].name[page.lang] != nil %}
               <td>{{ aName[0].name[page.lang] }}</td>
             {% endif %}
-
+            
             {% assign aName = site.data.administrations.provincial | where: "code", admin.adminCode %}
             {% if aName[0].name[page.lang] != nil %}
               <td>{{ aName[0].name[page.lang] }}</td>
             {% endif %}
-
+            
             {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
-            {% if aName[0].name[page.lang]] != nil %}
+            {% if aName[0].name[page.lang] != nil %}
               <td>{{ aName[0].name[page.lang] }}</td>
             {% endif %}
 
             {% assign aName = site.data.administrations.aboriginal | where: "code", admin.adminCode %}
-            {% if aName[0].nam != nil %}
+            {% if aName[0].name[page.lang] != nil %}
               <td>{{ aName[0].name[page.lang] }}</td>
             {% endif %}
-
-            <td><a href="#{{ release.name | slugify }}" aria-controls="{{ release.name | slugify }}" class="overlay-lnk" role="button" >{{ release.name }}</a></td>
+            
+            <td><a href="#{{ release.name[page.lang] | slugify }}" aria-controls="{{ release.name[page.lang] | slugify }}" class="overlay-lnk" role="button" >{{ release.name[page.lang] }}</a></td>
             <td>{{ release.description[page.lang] }}</td>
             <td>
               {% for license in release.licenses %}
@@ -265,9 +265,9 @@
   {% for admins in fptm %}
     {% assign admin = admins[1] %}
     {% for release in admin.releases %}
-      <section id="{{ release.name | slugify }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
+      <section id="{{ release.name[page.lang] | slugify }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
         <header class="modal-header">
-          <h2 class="modal-title">{{ release.name }}</h2>
+          <h2 class="modal-title">{{ release.name[page.lang] }}</h2>
         </header>
         <div class="modal-body">
           <p><strong>{{ release.description[page.lang] }}</strong></p>
@@ -276,12 +276,12 @@
           {% if aName[0].name[page.lang] != nil %}
             <p>Administration: {{ aName[0].name[page.lang] }}</p>
           {% endif %}
-
+          
           {% assign aName = site.data.administrations.provincial | where: "code", admin.adminCode %}
           {% if aName[0].name[page.lang] != nil %}
             <p>Administration: {{ aName[0].name[page.lang] }}</p>
           {% endif %}
-
+          
           {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
           {% if aName[0].name[page.lang] != nil %}
             <p>Administration: {{ aName[0].name[page.lang] }}</p>
@@ -305,12 +305,12 @@
             <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.spdxID }}</a>&nbsp;
           {% endfor %}
         </p>
-        <p>{{ site.Tag[page.lang] }}(s):
+        <p>{{ site.Tag[page.lang] }}(s): 
           {% for tag in release.tags[page.lang] %}
             {{ tag }}
           {% endfor %}
         </p>
-        <p>{{ site.CodeLanguage[page.lang] }}(s):
+        <p>{{ site.CodeLanguage[page.lang] }}(s): 
           {% for langauge in release.languages %}
             {{ langauge }}
           {% endfor %}
