--- a/_includes/form/presets/selectCode.html
+++ b/_includes/form/presets/selectCode.html
@@ -1,12 +1,32 @@
 <h2>{{ site.data.i18n.form.code.ProjectName.title[page.lang] }}</h2>
+{% assign title = "ProjectName" %}
 <div class="form-group">
-  {% assign title="ProjectName" %}
-  {% capture label %}{{ site.data.i18n.form.code.ProjectName.label[page.lang] }}{% endcapture %}
-  {% include form/components/label.html name=title required=include.required label=label %}
+  {% assign titleEn="enProjectName" %}
+  {% capture labelEn %}{{ site.data.i18n.form.code.ProjectName.label.en[page.lang] }}{% endcapture %}
+  {% include form/components/label.html name=titleEn required=include.required label=labelEn %}
+  {% if page.lang == "en" %}
   <div>
-    {% include form/components/input.html name=title type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule style="display: inline-block;" %}
+    {% include form/components/input.html name=titleEn type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule style="display: inline-block;" %}
     <select class="form-control" id="{{ title }}Select" name="{{ title }}" style="display: inline-block;" disabled>
       <option value="">&nbsp;</option>
     </select>
   </div>
+  {% else %}
+  {% include form/components/input.html name=titleEn type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule %}
+  {% endif %}
+</div>
+<div class="form-group">
+    {% assign titleFr="frProjectName" %}
+  {% capture labelFr %}{{ site.data.i18n.form.code.ProjectName.label.fr[page.lang] }}{% endcapture %}
+  {% include form/components/label.html name=titleFr required=include.required label=labelFr %}
+  {% if page.lang == "fr" %}
+  <div>
+    {% include form/components/input.html name=titleFr type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule style="display: inline-block;" %}
+    <select class="form-control" id="{{ title }}Select" name="{{ title }}" style="display: inline-block;" disabled>
+      <option value="">&nbsp;</option>
+    </select>
+  </div>
+  {% else %}
+  {% include form/components/input.html name=titleFr type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule %}
+  {% endif %}
 </div>
