Feature/code form opimization (#389)
* Correction for label

* Cleaned footer (each logical group has its own file now) + Added new logic for fetching data from code

* Fixing prettier

* Build correcion | Adaptation from name[en/fr] to a simple name

* Applying corrections for release.name[page.en] -> release.name

* Changed JS we kept since fetch is pulling from github and not local

* Revert "Applying corrections for release.name[page.en] -> release.name"

This reverts commit b05a50f7849cb530e93528298c1461923ab6804b.

* Revert "Build correcion | Adaptation from name[en/fr] to a simple name"

This reverts commit 36b82e8599fd1354fde375dafdc0ff5f82442800.

* Revert "Moved to a single name for code project instead of an EN and FR value"

This reverts commit 859427fcecca54c1e1198570a2d7395a3ce534ca.

* Revert "Changed JS we kept since fetch is pulling from github and not local"

This reverts commit 5efd885be5abe2da88859373a01d1098a5dbb5cc.

* Reverted to using name.en & name.fr

* Improved UI/UX for project code select

* Fixing build errorsa

* Fixing build errors

--- a/_includes/form/presets/adminCode.html
+++ b/_includes/form/presets/adminCode.html
@@ -8,28 +8,28 @@
 
   <select class="form-control" id="{{ name }}" name="{{ name }}" required="required">
     <option value="">&nbsp;</option>
-    <optgroup label={{ site.Federal[page.lang] }}>
+    <optgroup label={{ site.data.i18n.administrations.Federal.en }}>
       {% for org in site.data.administrations.federal %}
         {% if org.name[page.lang] != nil %}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
         {% endif %}
       {% endfor %}
     </optgroup>
-    <optgroup label={{ site.Provincial[page.lang] }}>
+    <optgroup label={{ site.data.i18n.administrations.Provincial.en }}>
       {% for org in site.data.administrations.provincial %}
         {% if org.name[page.lang] != nil %}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
         {% endif %}
       {% endfor %}
     </optgroup>
-    <optgroup label={{ site.Municipal[page.lang] }}>
+    <optgroup label={{ site.data.i18n.administrations.Municipal.en }}>
       {% for org in site.data.administrations.municipal %}
         {% if org.name[page.lang] != nil %}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
         {% endif %}
       {% endfor %}
     </optgroup>
-    <optgroup label={{ site.Aboriginal[page.lang] }}>
+    <optgroup label={{ site.data.i18n.administrations.Aboriginal.en }}>
       {% for org in site.data.administrations.aboriginal %}
         {% if org.name[page.lang] != nil %}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
@@ -38,5 +38,3 @@
     </optgroup>
   </select>
 </div>
-
-<div id="selectedProject" class="form-group"></div>
