--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,6 +76,7 @@
 {% endif %}
 {% if page.ref == "codeForm" %}
   <script type="text/javascript" src="../assets/js/src/codeForm.js"></script>
+  <script type="text/javascript" src="../assets/js/src/adminForm.js"></script>
 {% endif %}
 {% if page.ref == "standardsForm" %}
   <script type="text/javascript" src="../assets/js/src/standardsForm.js"></script>
